v0.1.8.v2019XXXX
* Added a buttons to the Proof Explorer view to hide essential hypothesis (VarLog), and to collapse the view.

v0.1.7.v20180417
* Added a new search command for listing (directly or indirectly) incomplete proofs
* Added support for main Metamath file within sub-directories of the project directory

v0.1.6.v20170606
* Added support for setting custom working variable prefix in the Project Property page
* Added support for setting "statement type" in the Project Property page
* Fixed the issue that proof unification/step selection was not working properly anymore after changing MM files.
* Fixed opening a theorem as a "new" proof if its compressed proof is empty, to avoid error message.
* Fixed clean up of messages before a rebuild.

v0.1.5.v20170515
* Added ability to add/remove types, and change their colors in the Project Property page
* Fixed exception when changing Project main file

v0.1.4.v201610XX
* Added "Verify Proofs" menu to the Metamath menu. 
* Fixed "MMT Folder not specified" issue.
* Fixed position for some error messages
* After unify action, reposition cursor at the previous location.
* Added a "toggle comment" command in the proof editor.

v0.1.3.v201607XX
* Added autoTransformations and deriveAutocomplete to speed up proof assistant
* Corrected issues when opening a metamath file outside of the metamath perspective
* Fixed "Search References" action
* Fixed positions for some messages
* Added highlighting of the matching bracket, and corresponding preference on the preference page
* Fixed the key bindings : Ctrl-U now launches the unification, like in MMJ2.

v0.1.2.v20160710
* Re-integrated with the latest MMJ2 (Source, MessageHandler, Progress, etc. )
* Fixed hover tooltip sizes
* Improved progress monitor during the loading / parsing of Metamath files
* Warning: Locations of many errors are not available anymore, or not correct. These will have to be corrected later on.